<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvViewExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Exercise:"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/lvViewExercise"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/tvViewExercise"
        android:divider="@color/cardview_light_background"
        android:dividerHeight="1dp"
        tools:listitem="@android:layout/simple_list_item_1" />

    <Button
        android:id="@+id/btnRemoveExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvViewExercise"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Remove Exercise" />

    <TextView
        android:id="@+id/tvExerciseCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRemoveExercise"
        android:text="Total Calories:"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

</RelativeLayout>